tests/src/frontend/typechecking/invalid/whenparam_call2.sk
class Foo<T>(x: T) {
  fun bar[T: Int](): T {
    this.x
  }
}

fun main(): void {
  print_raw(Foo("Fail").bar().toString())
}
